--- a/src/ChangeLog
+++ b/src/ChangeLog
@@ -3,7 +3,7 @@
 	* aws-net.adb:
 	(Wait): Use Errno local variable instead of second call into Std.Errno
 	 in Socket_Error exception message. Move case statement into loop to do
-	 not compare RC with -1 twice.
+	 not compare RC with -1 twice. Get Std.Errno only when RC = -1.
 
 2005-09-15  Pascal Obry  <pascal@obry.net>
 
