--- a/support/ChangeLog
+++ b/support/ChangeLog
@@ -1,3 +1,9 @@
+2005-09-21  Pascal Obry  <pascal@obry.net>
+
+	* gnat-2005-editions.dif:
+	Initial revison of the patch to be used to build AWS with GNAT
+	 GPL/GAP 2005 Editions.
+
 2004-05-27  Pascal Obry  <pascal@obry.org>
 
 	* README.TXT:
