--- a/support/ChangeLog
+++ b/support/ChangeLog
@@ -1,3 +1,8 @@
+2005-09-23  Pascal Obry  <pascal@obry.net>
+
+	* gnat-2005-editions.dif:
+	Updated to apply to latest sources.
+
 2005-09-21  Pascal Obry  <pascal@obry.net>
 
 	* gnat-2005-editions.dif:
