--- a/src/ChangeLog
+++ b/src/ChangeLog
@@ -1,7 +1,8 @@
 2005-10-11  Dmitriy Anisimkov <anisimkov@ada-ru.org>
 
 	* aws-status.adb:
-	(Preferred_Coding): Use "and then" to avoid using unitialized Next_QValue.
+	(Preferred_Coding): Use "and then" to avoid using unitialized
+	 Next_QValue.
 
 	* aws-server-http_utils.adb:
 	(Send): Do not flush socket if it was taken in the user callback.
