--- a/src/ChangeLog
+++ b/src/ChangeLog
@@ -1,3 +1,9 @@
+2005-10-11  Pascal Obry  <pascal@obry.net>
+
+	* src.gpr:
+	Rename project file from config to aws_config.
+	Work for EA11-014.
+
 2005-10-11  Dmitriy Anisimkov <anisimkov@ada-ru.org>
 
 	* aws-status.adb:
