--- a/tools/ChangeLog
+++ b/tools/ChangeLog
@@ -1,3 +1,9 @@
+2005-10-27  Pascal Obry  <pascal@obry.net>
+
+	* tools.gpr:
+	Do not import win32 project, not needed anymore.
+	Work for D507-003.
+
 2005-09-21  Pascal Obry  <pascal@obry.net>
 
 	* tools.gpr:
