--- a/docs/TODO
+++ b/docs/TODO
@@ -184,6 +184,8 @@ implemented:
   easier and cleaner than to have multiple variables that must be
   synchronized. This needs some more design as it is a tricky issue.
 
+- Detect long running download on the server side and put download
+  socket/stream pair into the socket set in the download task.
 
 =============== Point to fix/implement/review before next release (2.2)
 
