--- a/src/ChangeLog
+++ b/src/ChangeLog
@@ -1,3 +1,9 @@
+2005-11-07  Pascal Obry  <pascal@obry.net>
+
+	* aws-net-acceptors.ads:
+	Update comments.
+	Update copyright notice.
+
 2005-11-01  Pascal Obry  <pascal@obry.net>
 
 	* aws-hotplug.ads:
