--- a/regtests/ChangeLog
+++ b/regtests/ChangeLog
@@ -1,3 +1,8 @@
+2005-11-17  Dmitriy Anisimkov <anisimkov@ada-ru.org>
+
+	* sockover.adb, sockover.out:
+	New regression test.
+
 2005-11-02  Pascal Obry  <pascal@obry.net>
 
 	* dm.adb:
