--- a/src/ChangeLog
+++ b/src/ChangeLog
@@ -1,3 +1,8 @@
+2005-11-17  Dmitriy Anisimkov <anisimkov@ada-ru.org>
+
+	* aws-net.adb:
+	(Send): Properly handle when Last > Data'Last.
+
 2005-11-16  Pascal Obry  <pascal@obry.net>
 
 	* aws-net.ads:
